--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.1",
   "author": "Justin Langston <nitsujlangston@gmail.com>",
   "main": "server.js",
+  "scripts" : {
+    "test": "mocha ./test/unit"
+  },
   "dependencies": {
     "JSONStream": "~1.3.1",
     "async": "^2.5.0",
@@ -23,6 +26,9 @@
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint-plugin-import": "^2.8.0",
+    "mocha": "^5.0.5",
+    "sinon": "^4.4.8",
+    "supertest": "^3.0.0"
   }
 }
