Initial changes to connect to bitcore-node

--- a/app/ionic.config.json
+++ b/app/ionic.config.json
@@ -8,7 +8,7 @@
   "proxies": [
     {
       "path": "/api",
-      "proxyUrl": "https://bch-insight.bitpay.com/api"
+      "proxyUrl": "http://localhost:3000/api"
     }
   ]
 }
