Adding prettier params for autoformat

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.1",
   "author": "Justin Langston <nitsujlangston@gmail.com>",
   "main": "server.js",
+  "prettier": {
+    "singleQuote": true
+  },
   "scripts": {
     "test": "mocha ./test/unit"
   },
