--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "JSONStream": "~1.3.1",
     "async": "^2.5.0",
-    "bitcore-lib": "git+ssh://git@github.com/bitpay/bitcore-lib.git#segwit-test",
-    "bitcore-lib-cash": "git+ssh://git@github.com/nitsujlangston/bitcore-lib.git#update/cashAddrFirst",
-    "bitcore-p2p": "git+ssh://git@github.com:bitpay/bitcore-p2p.git#master",
-    "bitcore-p2p-cash": "git+ssh://git@github.com:bitpay/bitcore-p2p.git#cash",
+    "bitcore-lib": "^8.0.0",
+    "bitcore-lib-cash": "^8.0.0",
+    "bitcore-p2p": "^8.0.0",
+    "bitcore-p2p-cash": "^8.0.0",
     "body-parser": "~1.17.2",
     "express": "~4.15.3",
     "mkdirp": "^0.5.1",
