--- a/packages/bitcore-p2p/package.json
+++ b/packages/bitcore-p2p/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/bitpay/bitcore-p2p.git"
   },
   "dependencies": {
-    "bitcore-lib": "5.0.0-beta.1",
+    "bitcore-lib": "^8.0.0",
     "bcoin": "1.0.0-beta.12",
     "bloom-filter": "^0.2.0",
     "buffers": "bitpay/node-buffers#v0.1.2-bitpay",
