--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "version" : "8.0.0",
-	"devDependencies": {
-		"lerna": "^2.9.1"
-	}
+  "version": "8.0.0",
+  "scripts": {
+    "postinstall": "./node_modules/.bin/lerna bootstrap"
+  },
+  "devDependencies": {
+    "lerna": "^2.9.1"
+  }
 }
