--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "singleQuote": true
   },
   "scripts": {
+    "start": "node server.js",
     "test": "mocha ./test/unit"
   },
   "dependencies": {
