--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -11,6 +11,7 @@
     "singleQuote": true
   },
   "scripts": {
+    "start": "node server.js",
     "test": "mocha ./test/unit"
   },
   "dependencies": {
