--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -26,7 +26,9 @@
     "test": "cd app && ng test --code-coverage",
     "test:ci": "cd app && npm run test:ci"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bitcore-lib": "^8.0.0"
+  },
   "devDependencies": {
     "@angular/cli": "^1.7.3",
     "npm-run-all": "^4.0.2"
