Adding trusted host environment variables, altering config to push the trusted host if it's defined

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ bitcore-node:
     - 3000:3000
   environment:
     - DB_HOST=database
+    - TRUSTED_PEER='host.docker.internal'
+    - TRUSTED_PEER_PORT=${TRUSTED_PEER_PORT}
 #insight:
   #image: insight
   #links:
