--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "version": "8.0.0",
   "scripts": {
-    "build": "docker build -t bitcore-node ."
-   },
+    "build": "docker build -t bitcore-node .",
+    "postinstall": "./node_modules/.bin/lerna bootstrap"
+  },
   "devDependencies": {
     "lerna": "^2.9.1"
   }
