--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -19,10 +19,8 @@
   ],
   "bitcoreNode": "bitcore-node",
   "scripts": {
-    "postinstall": "run-s install-app",
-    "install-app": "cd app && npm install",
-    "start": "run-s watch-app",
-    "watch-app": "cd app && npm start",
+    "postinstall": "cd app && npm install",
+    "start": "cd app && npm start",
     "test": "cd app && ng test --code-coverage",
     "test:ci": "cd app && npm run test:ci"
   },
@@ -30,7 +28,6 @@
     "bitcore-lib": "^8.0.0"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
-    "npm-run-all": "^4.0.2"
+    "@angular/cli": "^1.7.3"
   }
 }
