--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.0.3",
     "progress": "^2.0.0",
     "request": "^2.81.0",
+    "secp256k1": "^3.5.0",
     "snappy": "^6.0.1",
     "underscore": "^1.8.3",
     "winston": "^3.0.0-rc1"
