--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -7,6 +7,7 @@
   "version": "8.0.0",
   "author": "Justin Langston <nitsujlangston@gmail.com>",
   "main": "server.js",
+  "bin": "bin/start",
   "prettier": {
     "singleQuote": true
   },
