Fixing startup script

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bitcore-p2p": "^8.0.0",
     "bitcore-p2p-cash": "^8.0.0",
     "body-parser": "~1.17.2",
+    "commander": "^2.15.1",
     "express": "~4.15.3",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.0.3",
