--- a/app/ionic.config.json
+++ b/app/ionic.config.json
@@ -7,8 +7,8 @@
   },
   "proxies": [
     {
-      "path": "/api",
-      "proxyUrl": "https://bch-insight.bitpay.com/api"
+      "path": "IONIC_PATH",
+      "proxyUrl": "IONIC_PROXY_URL"
     }
   ]
 }
