--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "JSONStream": "~1.3.1",
         "async": "^2.5.0",
+        "bcrypt": "^2.0.1",
         "bitcore-lib": "^8.0.0",
         "bitcore-lib-cash": "^8.0.0",
         "bitcore-mnemonic": "^8.0.0",
