--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
+*.csv
+*.dat
+*.iml
+*.log
+*.out
+*.pid
+*.seed
+*.sublime-*
+*.swo
+*.swp
+*.tgz
+*.xml
+.DS_Store
+.idea
+.project
+.strong-pm
+coverage
 node_modules
-config.json
-*bitcore.config.*
-.bcoin
-*.vscode
+npm-debug.log
+dist
+src/vendor
+src/dist
+build/
+build-test/
