--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "postinstall": "./node_modules/.bin/lerna bootstrap"
   },
   "devDependencies": {
-    "lerna": "^2.9.1"
+    "lerna": "^2.9.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
   }
 }
