more security updates

--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "bitcore-lib-cash": "^8.0.0",
     "bitcore-p2p": "^8.0.0",
     "bitcore-p2p-cash": "^8.0.0",
-    "body-parser": "~1.17.2",
-    "express": "^4.15.5",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.0.11",
     "progress": "^2.0.0",
