--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "start": "npm run tsc && node build/server.js",
     "debug": "npm run tsc && node --inspect build/server.js --DEBUG true",
-    "tsc": "./node_modules/.bin/tsc",
+    "tsc": "$(npm bin)/tsc",
+    "doc": "$(npm bin)/typedoc",
     "tsc:test": "./node_modules/.bin/tsc -p ./tsconfig.test.json",
     "test": "npm run tsc:test && node ./build-test/test/runners/unit.js && node ./build-test/test/runners/integration.js",
     "test:unit": "npm run tsc:test && node ./build-test/test/runners/unit.js",
@@ -50,6 +51,7 @@
     "mocha": "^5.0.5",
     "sinon": "^4.4.8",
     "supertest": "^3.0.0",
+    "typedoc": "^0.11.1",
     "typescript": "^2.8.3"
   },
   "dependencies": {
