Added script to open docs in browser.

--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -20,6 +20,7 @@
     "debug": "npm run tsc && node --inspect build/server.js --DEBUG true",
     "tsc": "$(npm bin)/tsc",
     "doc": "$(npm bin)/typedoc",
+    "doc:open": "open docs/index.html || xdg-open docs/index.html",
     "tsc:test": "./node_modules/.bin/tsc -p ./tsconfig.test.json",
     "test": "npm run tsc:test && node ./build-test/test/runners/unit.js && node ./build-test/test/runners/integration.js",
     "test:unit": "npm run tsc:test && node ./build-test/test/runners/unit.js",
