--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -71,6 +71,7 @@
     "mongoose": "^5.0.11",
     "progress": "^2.0.0",
     "request": "^2.86.0",
+    "rxjs": "^6.1.0",
     "secp256k1": "^3.5.0",
     "snappy": "^6.0.1",
     "strongly-typed-events": "^1.4.5",
