Worker service needs to just return if it's debug mode

--- a/packages/bitcore-node/.vscode/launch.json
+++ b/packages/bitcore-node/.vscode/launch.json
@@ -17,7 +17,8 @@
       "args": ["--DEBUG", "true"],
       "sourceMaps": true,
       "outFiles": ["${workspaceFolder}/build/**/*.js"],
-      "console": "integratedTerminal"
+      "console": "integratedTerminal",
+      "preLaunchTask": "npm: tsc"
     },
     {
       "type": "node",
