travis for integration tests

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,11 +7,11 @@ services:
       context: .
       dockerfile: Dockerfile-test
     ports:
-      - 8100:8100
-      - 3000:3000
+      - "8100:8100"
+      - "3000:3000"
     environment:
-      DB_HOST: db
-      DB_NAME: bitcore-test
+      - DB_HOST=db
+      - DB_NAME=bitcore-test
     depends_on:
       - db
       - bitcoin
