--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -45,13 +45,15 @@
     "@types/sinon": "^4.3.3",
     "@types/winston": "^2.3.9",
     "chai": "^4.1.2",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "glob": "^7.1.2",
     "mocha": "^5.0.5",
     "sinon": "^4.4.8",
     "supertest": "^3.0.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "typescript-eslint-parser": "^15.0.0"
   },
   "dependencies": {
     "JSONStream": "~1.3.1",
