--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -25,6 +25,7 @@
         "levelup": "^2.0.2",
         "mkdirp": "^0.5.1",
         "progress": "^2.0.0",
+        "promptly": "^3.0.3",
         "request": "^2.85.0",
         "request-promise-native": "^1.0.5",
         "secp256k1": "^3.5.0"
