Added end to end test for p2p BTC in bitcore-node.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -12,6 +12,7 @@ services:
     environment:
       - DB_HOST=db
       - DB_NAME=bitcore-test
+      - BITCORE_CONFIG_PATH=/bitcore/bitcore-test.config.json
     depends_on:
       - db
       - bitcoin
