--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -45,6 +45,7 @@
     "@types/mongodb": "^3.0.18",
     "@types/mongoose": "^5.0.11",
     "@types/node": "^10.0.3",
+    "@types/node-fetch": "^2.1.0",
     "@types/request": "^2.47.0",
     "@types/sinon": "^4.3.3",
     "@types/winston": "^2.3.9",
@@ -70,6 +71,7 @@
     "express": "^4.16.3",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.0.11",
+    "node-fetch": "^2.1.2",
     "progress": "^2.0.0",
     "request": "^2.86.0",
     "rxjs": "^6.1.0",
