add RUN_DIR to docker files

--- a/app/.docker/env/bch.development.env
+++ b/app/.docker/env/bch.development.env
@@ -1,4 +1,5 @@
+RUN_DIR=/var/www
 DEFAULT_CURRENCY=BCH
 API_PREFIX=/api
 IONIC_PATH=/api
-IONIC_PROXY_URL=https://bch-insight.bitpay.com/api
+IONIC_PROXY_URL=http://10.10.11.55:3001/api
