--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -44,7 +44,7 @@
     "@types/mocha": "^5.2.0",
     "@types/mongodb": "^3.0.18",
     "@types/mongoose": "^5.0.11",
-    "@types/node": "^10.0.3",
+    "@types/node": "10.0.2",
     "@types/request": "^2.47.0",
     "@types/sinon": "^4.3.3",
     "@types/winston": "^2.3.9",
