adds template for ionic config to be used in docker

--- a/app/.docker/templates/ionic.config.json
+++ b/app/.docker/templates/ionic.config.json
@@ -7,8 +7,8 @@
   },
   "proxies": [
     {
-      "path": "/api",
-      "proxyUrl": "https://insight.bitpay.com/api"
+      "path": "%IONIC_PATH%",
+      "proxyUrl": "%IONIC_PROXY_URL%"
     }
   ]
 }
