--- a/packages/bitcore-client/wallet.config.json
+++ b/packages/bitcore-client/wallet.config.json
@@ -2,11 +2,15 @@
   "wallets": [
     {
       "name": "test",
-      "path": "test"
+      "path": "testing"
     },
     {
-      "name": "test_1",
-      "path": "test"
+      "name": "test1",
+      "path": "testing"
+    },
+    {
+      "name": "test2",
+      "path": "testing"
     }
   ]
 }
