--- a/packages/insight/app/package.json
+++ b/packages/insight/app/package.json
@@ -1,6 +1,9 @@
 {
   "name": "insight-app",
   "private": true,
+  "config": {
+    "ionic_webpack": "webpack.config.js"
+  },
   "scripts": {
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
@@ -58,7 +61,8 @@
     "ts-node": "3.0.4",
     "tslint": "5.3.2",
     "tslint-eslint-rules": "4.1.1",
-    "typescript": "2.3.3"
+    "typescript": "2.3.3",
+    "webpack-merge": "^4.1.3"
   },
   "engines": {
     "node": ">=8"
