--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -71,6 +71,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "lru-cache": "^4.1.3",
     "mkdirp": "^0.5.1",
     "mongodb": "^3.1.1",
     "mongoose": "^5.0.11",
