--- a/packages/insight/app/package.json
+++ b/packages/insight/app/package.json
@@ -43,9 +43,9 @@
     "@angular/cli": "^1.1.2",
     "@ionic/app-scripts": "1.3.7",
     "@types/jasmine": "2.5.41",
-    "@types/node": "7.0.4",
+    "@types/node": "^7.0.4",
     "codecov": "2.2.0",
-    "ionic": "3.20.0",
+    "ionic": "4.0.6",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
     "karma": "1.4.1",
