Reverting config and package.json. Removing replace from start script

--- a/packages/insight/app/ionic.config.json
+++ b/packages/insight/app/ionic.config.json
@@ -1,9 +1,10 @@
 {
   "name": "insight",
+  "app_id": "",
+  "type": "ionic-angular",
   "integrations": {
     "cordova": {}
   },
-  "type": "ionic-angular",
   "proxies": [
     {
       "path": "/api",
