--- a/packages/insight/app/package.json
+++ b/packages/insight/app/package.json
@@ -43,7 +43,7 @@
     "@angular/cli": "^1.1.2",
     "@ionic/app-scripts": "1.3.7",
     "@types/jasmine": "2.5.41",
-    "@types/node": "^7.0.4",
+    "@types/node": "7.0.4",
     "codecov": "2.2.0",
     "ionic": "3.20.0",
     "jasmine-core": "2.5.2",
