--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "preconditions": "^2.2.1",
     "read": "^1.0.5",
     "request": "^2.53.0",
+    "request-promise-native": "^1.0.5",
     "secp256k1": "^3.1.0",
     "sjcl": "^1.0.2",
     "socket.io": "^2.2.0",
