--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -28,7 +28,8 @@
         "promptly": "^3.0.3",
         "request": "^2.87.0",
         "request-promise-native": "^1.0.5",
-        "secp256k1": "^3.5.0"
+        "secp256k1": "^3.5.0",
+        "socket.io-client": "^2.1.1"
     },
     "devDependencies": {
         "eslint-config-airbnb-base": "^12.1.0",
