--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -50,6 +50,7 @@
     "@types/node": "10.0.2",
     "@types/request": "^2.47.0",
     "@types/sinon": "^4.3.3",
+    "@types/socket.io": "^1.4.38",
     "@types/through2": "^2.0.33",
     "@types/winston": "^2.3.9",
     "chai": "^4.1.2",
@@ -73,6 +74,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "http": "0.0.0",
     "lru-cache": "^4.1.3",
     "mkdirp": "^0.5.1",
     "mongodb": "^3.1.1",
@@ -82,6 +84,7 @@
     "rxjs": "^6.1.0",
     "secp256k1": "^3.5.0",
     "snappy": "^6.0.1",
+    "socket.io": "^2.1.1",
     "through2": "^2.0.3",
     "underscore": "^1.8.3",
     "web3": "^1.0.0-beta.34",
