--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -1,14 +1,41 @@
 {
-  "name": "insight",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "name": "@bitpay/insight",
+  "version": "8.0.0",
+  "description": "A blockchain explorer for Bitcore",
+  "homepage": "https://github.com/bitpay/bitcore",
+  "repository": "git://github.com/bitpay/bitcore.git",
+  "bugs": {
+    "url": "https://github.com/bitpay/bitcore/issues"
+  },
+  "license": "MIT",
+  "keywords": [
+    "insight",
+    "insight-ui",
+    "blockchain",
+    "block explorer",
+    "bitcoin",
+    "bitcore",
+    "API"
+  ],
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "prettier": {
+    "singleQuote": true
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "run-s lint:*",
+    "lint:ng": "ng lint",
+    "lint:prettier": "prettier '{*,**/*}.{js,ts,md,json,css}' --list-different",
+    "fix": "run-s fix:*",
+    "fix:prettier": "prettier '{*,**/*}.{js,ts,md,json,css}' --write",
+    "fix:tslint": "tslint --fix --project .",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -29,20 +56,21 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "~6.1.1",
-    "@angular/compiler": "~6.1.1",
-    "@angular/compiler-cli": "~6.1.1",
-    "@angular/language-service": "~6.1.1",
     "@angular-devkit/architect": "~0.7.2",
     "@angular-devkit/build-angular": "~0.7.2",
     "@angular-devkit/core": "~0.7.2",
     "@angular-devkit/schematics": "~0.7.2",
+    "@angular/cli": "~6.1.1",
+    "@angular/compiler": "~6.1.1",
+    "@angular/compiler-cli": "~6.1.1",
+    "@angular/language-service": "~6.1.1",
     "@ionic/ng-toolkit": "^1.0.0",
     "@ionic/schematics-angular": "^1.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.9.2",
     "codelyzer": "~4.4.2",
+    "cz-conventional-changelog": "^2.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -50,10 +78,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^4.1.3",
+    "prettier": "^1.14.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
+    "tslint-angular": "^1.1.2",
+    "tslint-config-prettier": "^1.15.0",
     "typescript": "~2.9.2"
-  },
-  "description": "An Ionic project"
+  }
 }
