--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -50,9 +50,9 @@
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "4.0.0-beta.7",
+    "@ionic/angular": "^4.0.0-beta.12",
     "core-js": "^2.5.3",
-    "rxjs": "6.2.2",
+    "rxjs": "~6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -60,7 +60,7 @@
     "@angular-devkit/build-angular": "~0.7.2",
     "@angular-devkit/core": "~0.7.2",
     "@angular-devkit/schematics": "~0.7.2",
-    "@angular/cli": "~6.1.1",
+    "@angular/cli": "~6.2.3",
     "@angular/compiler": "~6.1.1",
     "@angular/compiler-cli": "~6.1.1",
     "@angular/language-service": "~6.1.1",
