--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -51,7 +51,9 @@
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "^4.0.0-beta.12",
+    "backoff-rxjs": "0.0.10",
     "core-js": "^2.5.3",
+    "ngx-logger": "^3.3.2",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.26"
   },
