--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.3",
     "@types/express": "^4.11.1",
+    "@types/lodash": "^4.14.116",
     "@types/mocha": "^5.2.0",
     "@types/mongodb": "^3.1.3",
     "@types/mongoose": "^5.0.11",
@@ -73,6 +74,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "lodash": "^4.17.11",
     "lru-cache": "^4.1.3",
     "mkdirp": "^0.5.1",
     "mongodb": "^3.1.1",
