feat(insight): scaffold routing, continue building out blocks view

--- a/packages/insight/angular.json
+++ b/packages/insight/angular.json
@@ -70,7 +70,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "app:build",
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": "proxy.conf.js"
           },
           "configurations": {
             "production": {
