--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -47,6 +47,7 @@
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
+    "@ionic-native/app-preferences": "^5.0.0-beta.21",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
