--- a/packages/insight/tsconfig.json
+++ b/packages/insight/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "strictNullChecks": true,
     "target": "es5",
     "lib": ["es2017", "dom"]
   }
