--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -52,6 +52,7 @@
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "^4.0.0-beta.12",
+    "angular-pipes": "^9.0.0",
     "backoff-rxjs": "0.0.10",
     "core-js": "^2.5.3",
     "fast-deep-equal": "^2.0.1",
