installing client for tests

--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -52,6 +52,7 @@
     "@types/request": "^2.47.0",
     "@types/sinon": "^4.3.3",
     "@types/socket.io": "^1.4.38",
+    "@types/socket.io-client": "^1.4.32",
     "@types/through2": "^2.0.33",
     "@types/winston": "^2.3.9",
     "chai": "^4.1.2",
@@ -87,6 +88,7 @@
     "secp256k1": "^3.5.0",
     "snappy": "^6.0.1",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "through2": "^2.0.3",
     "underscore": "^1.8.3",
     "web3": "^1.0.0-beta.34",
