--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitcore-build",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "A helper for common tasks to build bitcore modules'",
   "main": "index.js",
   "scripts": {
@@ -41,28 +41,20 @@
   },
   "homepage": "https://github.com/bitpay/bitcore-build",
   "dependencies": {
-    "brfs": "^1.4.3",
-    "browserify": "^13.1.1",
-    "chai": "^3.5.0",
-    "gulp": "^3.9.1",
-    "gulp-bump": "^2.7.0",
-    "gulp-coveralls": "^0.1.4",
-    "gulp-git": "^2.0.1",
-    "gulp-jshint": "^2.0.4",
-    "gulp-mocha": "^4.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-shell": "^0.6.3",
-    "gulp-uglify": "^2.1.0",
-    "gulp-util": "^3.0.8",
+    "@kollavarsham/gulp-coveralls": "^0.2.2",
+    "brfs": "^2.0.1",
+    "browserify": "^16.2.3",
+    "chai": "^4.2.0",
+    "gulp": "^4.0.0",
+    "gulp-mocha": "^6.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-shell": "^0.6.5",
+    "gulp-uglify": "^2.1.2",
     "istanbul": "^0.4.5",
-    "karma": "^1.7.1",
-    "karma-detect-browsers": "^2.2.4",
+    "karma": "^3.1.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
     "lodash": "^4.17.4",
-    "mocha": "^3.2.0",
-    "plato": "^1.7.0",
-    "run-sequence": "^1.2.2",
-    "zuul": "^3.11.1"
+    "mocha": "^5.2.0"
   }
 }
