--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitcore-mnemonic",
-  "version": "1.5.1",
+  "version": "1.6.0",
   "description": "BIP39 Mnemonics implemented for Bitcore.",
   "author": "BitPay <dev@bitpay.com>",
   "main": "index.js",
@@ -34,17 +34,15 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "assert": "^1.1.2",
-    "bitcore-build": "git://github.com/bitpay/bitcore-build.git",
-    "brfs": "^1.2.0",
-    "chai": "^1.10.0",
-    "gulp": "^3.8.10",
-    "mocha": "^2.2.5"
+    "assert": "^1.4.1",
+    "bitcore-build": "https://github.com/bitpay/bitcore-build.git#1023e8a99cd42b9241ccafe8e34c52f308c10284",
+    "brfs": "^2.0.1",
+    "mocha": "^5.2.0"
   },
   "dependencies": {
-    "unorm": "^1.3.3"
+    "unorm": "^1.4.1"
   },
   "peerDependencies": {
-    "bitcore-lib": "^0.15.0"
+    "bitcore-lib": "^0.16.0"
   }
 }
