--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
   },
   "browser": "lib/browser.js",
   "dependencies": {
-    "asn1.js": "=4.9.1",
-    "asn1.js-rfc3280": "=4.0.0",
-    "asn1.js-rfc5280": "=2.0.0",
+    "asn1.js": "^5.0.1",
+    "asn1.js-rfc3280": "^4.0.0",
+    "asn1.js-rfc5280": "^3.0.0",
     "bitcore-lib": "=0.16.0",
     "bs58": "^4.0.1",
-    "jsrsasign": "^8.0.4",
+    "jsrsasign": "^8.0.12",
     "protobufjs": "=5.0.3"
   },
   "devDependencies": {
