--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "bitcore-lib": "^0.16.0",
     "unorm": "^1.4.1"
   },
   "peerDependencies": {
