--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "asn1.js": "^5.0.1",
     "asn1.js-rfc3280": "^4.0.0",
     "asn1.js-rfc5280": "^3.0.0",
-    "bitcore-lib": "=0.16.0",
     "bs58": "^4.0.1",
     "jsrsasign": "^8.0.12",
     "protobufjs": "=5.0.3"
+  },
+  "peerDependencies": {
+    "bitcore-lib": "=0.16.0"
   },
   "devDependencies": {
     "bitcore-build": "https://github.com/bitpay/bitcore-build.git#1023e8a99cd42b9241ccafe8e34c52f308c10284",
