--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "bitcore-lib-cash": "=0.19.0",
     "body-parser": "^1.11.0",
     "compression": "^1.6.2",
-    "coveralls": "^2.11.2",
     "email-validator": "^1.0.1",
     "express": "^4.10.0",
     "express-rate-limit": "^2.6.0",
@@ -34,10 +33,9 @@
     "locker": "^0.1.0",
     "locker-server": "^0.1.3",
     "lodash": "^4.17.11",
-    "mocha-lcov-reporter": "0.0.1",
     "moment": "^2.10.3",
     "mongodb": "^2.0.27",
-    "morgan": "*",
+    "morgan": "^1.9.1",
     "mustache": "^2.1.0",
     "nodemailer": "^1.3.4",
     "nodemailer-sendgrid-transport": "^0.2.0",
@@ -50,14 +48,16 @@
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "sticky-session": "^0.1.0",
-    "uuid": "*"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^1.9.1",
+    "coveralls": "^2.11.2",
     "istanbul": "*",
     "jsdoc": "^3.5.5",
     "memdown": "^1.0.0",
-    "mocha": "^1.18.2",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "proxyquire": "^1.7.2",
     "sinon": "1.10.3",
     "supertest": "*",
