--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "mocha-lcov-reporter": "^1.3.0",
     "proxyquire": "^1.7.2",
     "sinon": "1.10.3",
-    "supertest": "*",
-    "tingodb": "^0.5.1"
+    "supertest": "*"
   },
   "scripts": {
     "start": "./start.sh",
