--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/bitpay/bitcore-wallet-service/issues"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "async": "^0.9.2",
     "bitcore-lib": "=0.16.0",
     "bitcore-lib-cash": "=0.19.0",
@@ -37,8 +38,6 @@
     "mongodb": "^2.0.27",
     "morgan": "^1.9.1",
     "mustache": "^2.1.0",
-    "nodemailer": "^1.3.4",
-    "nodemailer-sendgrid-transport": "^0.2.0",
     "npmlog": "^0.1.1",
     "preconditions": "^2.2.1",
     "read": "^1.0.5",
@@ -59,7 +58,7 @@
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "proxyquire": "^1.7.2",
-    "sinon": "1.10.3",
+    "sinon": "^7.1.1",
     "supertest": "*"
   },
   "scripts": {
