--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "bitcore-mnemonic": "^1.3.0",
     "bitcore-payment-protocol": "^1.7.0",
     "json-stable-stringify": "^1.0.0",
-    "lodash": "^4.17.4",
-    "preconditions": "^1.0.8",
+    "lodash": "^4.17.11",
+    "preconditions": "^2.2.1",
     "sjcl": "1.0.3",
     "superagent": "^3.4.1"
   },
@@ -42,13 +42,10 @@
     "chai": "^1.9.1",
     "coveralls": "^2.11.2",
     "istanbul": "*",
-    "mocha": "^1.18.2",
-    "sinon": "^1.10.3",
+    "mocha": "^5.2.0",
+    "sinon": "^7.1.1",
     "supertest": "^3.0.0",
-    "tingodb": "^0.3.4",
-    "uglify": "^0.1.1",
-    "uuid": "^2.0.1",
-    "grunt-jsdox": "matiu/grunt-jsdox#update/jsdoc-4.10"
+    "uuid": "^2.0.1"
   },
   "scripts": {
     "start": "node app.js",
