--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -64,10 +64,11 @@
     "@ionic/storage": "2.0.1",
     "angular2-moment": "^1.6.0",
     "angular2-qrcode": "^2.0.1",
+    "bitcore-wallet-client": "^6.7.5",
     "cz-conventional-changelog": "^2.1.0",
     "ionic-angular": "3.4.2",
     "ionicons": "3.0.0",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.14.3",
     "rxjs": "5.4.0",
     "standard-version": "^4.4.0",
