--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -64,7 +64,8 @@
     "@ionic/storage": "2.0.1",
     "angular2-moment": "^1.6.0",
     "angular2-qrcode": "^2.0.1",
-    "bitcore-wallet-client": "^6.7.5",
+    "bitcore-lib": "^0.16.0",
+    "bitcore-lib-cash": "^0.19.0",
     "cz-conventional-changelog": "^2.1.0",
     "ionic-angular": "3.4.2",
     "ionicons": "3.0.0",
