--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bitpay/insight",
+  "name": "@bitpay/insight-previous",
   "description": "A blockchain explorer for Bitcore",
   "version": "8.0.0",
   "repository": "git://github.com/bitpay/bitcore.git",
@@ -101,6 +101,7 @@
     "tslint": "5.3.2",
     "tslint-eslint-rules": "4.1.1",
     "typescript": "2.3.3",
+    "webdriver-manager": "^12.1.0",
     "webpack-merge": "^4.1.3"
   },
   "engines": {
