--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -69,6 +69,7 @@
     "cz-conventional-changelog": "^2.1.0",
     "ionic-angular": "3.4.2",
     "ionicons": "3.0.0",
+    "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.14.3",
     "rxjs": "5.4.0",
