# This is a combination of 4 commits. # This is the 1st commit message:
Tag future transactions if config is set

# This is the commit message #2:

Adding bitcore-client package.json

# This is the commit message #3:

Testing version number

# This is the commit message #4:

Updating test dockerfile and lerna json

--- a/Dockerfile-test
+++ b/Dockerfile-test
@@ -2,23 +2,26 @@ FROM node:8
 
 WORKDIR /bitcore
 
-# Install all deps in all packages
+FROM node:carbon
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN npm install
+COPY lerna.json ./
+
+COPY ./packages/bitcore-mnemonic/package.json ./packages/bitcore-mnemonic/package.json
 COPY ./packages/bitcore-lib/package.json ./packages/bitcore-lib/package.json
 COPY ./packages/bitcore-lib-cash/package.json ./packages/bitcore-lib-cash/package.json
 COPY ./packages/bitcore-p2p/package.json ./packages/bitcore-p2p/package.json
 COPY ./packages/bitcore-p2p-cash/package.json ./packages/bitcore-p2p-cash/package.json
 COPY ./packages/bitcore-wallet-client/package.json ./packages/bitcore-wallet-client/package.json
+COPY ./packages/bitcore-client/package.json ./packages/bitcore-client/package.json
 COPY ./packages/bitcore-wallet/package.json ./packages/bitcore-wallet/package.json
 COPY ./packages/bitcore-node/package.json ./packages/bitcore-node/package.json
 COPY ./packages/insight/package.json ./packages/insight/package.json
-COPY ./packages/bitcore-mnemonic/package.json ./packages/bitcore-mnemonic/package.json
-COPY ./package.json package.json
-COPY ./package-lock.json package-lock.json
-RUN npm install
+COPY ./packages/insight/app/package.json ./packages/insight/app/package.json
 
-# Run Lerna
-COPY ./lerna.json lerna.json
 RUN ./node_modules/.bin/lerna bootstrap
+
 
 # Add source
 ADD . /bitcore
