--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -69,7 +69,7 @@
   "dependencies": {
     "JSONStream": "~1.3.1",
     "async": "^2.5.0",
-    "bitcore-client": "8.0.0",
+    "bitcore-client": "^8.0.0",
     "bitcore-lib": "^8.0.0",
     "bitcore-lib-cash": "^8.0.0",
     "bitcore-p2p": "^8.0.0",
