--- a/Dockerfile-test
+++ b/Dockerfile-test
@@ -1,29 +1,26 @@
-FROM node:8
-
+FROM node:10
 WORKDIR /bitcore
-
-FROM node:carbon
-WORKDIR /usr/src/app
-COPY package*.json ./
-RUN npm install
-COPY lerna.json ./
-
-COPY ./packages/bitcore-mnemonic/package.json ./packages/bitcore-mnemonic/package.json
-COPY ./packages/bitcore-lib/package.json ./packages/bitcore-lib/package.json
-COPY ./packages/bitcore-lib-cash/package.json ./packages/bitcore-lib-cash/package.json
-COPY ./packages/bitcore-p2p/package.json ./packages/bitcore-p2p/package.json
-COPY ./packages/bitcore-p2p-cash/package.json ./packages/bitcore-p2p-cash/package.json
-COPY ./packages/bitcore-wallet-client/package.json ./packages/bitcore-wallet-client/package.json
-COPY ./packages/bitcore-client/package.json ./packages/bitcore-client/package.json
-COPY ./packages/bitcore-wallet/package.json ./packages/bitcore-wallet/package.json
-COPY ./packages/bitcore-node/package.json ./packages/bitcore-node/package.json
-COPY ./packages/insight/package.json ./packages/insight/package.json
-
-RUN ./node_modules/.bin/lerna bootstrap
-RUN ./node_modules/.bin/lerna run compile
-
 # Add source
+COPY lerna.json ./
+COPY package*.json ./
+
+COPY  ./packages/bitcore-client/package.json ./packages/bitcore-client/package.json
+COPY  ./packages/bitcore-lib-cash/package.json ./packages/bitcore-lib-cash/package.json
+COPY  ./packages/bitcore-lib/package.json ./packages/bitcore-lib/package.json
+COPY  ./packages/bitcore-mnemonic/package.json ./packages/bitcore-mnemonic/package.json
+COPY  ./packages/bitcore-node/package.json ./packages/bitcore-node/package.json
+COPY  ./packages/bitcore-p2p-cash/package.json ./packages/bitcore-p2p-cash/package.json
+COPY  ./packages/bitcore-p2p/package.json ./packages/bitcore-p2p/package.json
+COPY  ./packages/bitcore-wallet-client/package.json ./packages/bitcore-wallet-client/package.json
+COPY  ./packages/bitcore-wallet/package.json ./packages/bitcore-wallet/package.json
+COPY  ./packages/insight-previous/package.json ./packages/insight-previous/package.json
+COPY  ./packages/insight/package.json ./packages/insight/package.json
+
+RUN npm install
+RUN npm run bootstrap
 ADD . .
+RUN npm run compile
+
 
 # Run test script
 WORKDIR ./packages/bitcore-node
