--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,12 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/node:10
+    machine:
+      image: circleci/classic:latest
+      docker_layer_caching: true
     working_directory: ~/bitcore
     steps:
       - checkout
-
-      - setup_remote_docker:
-          docker_layer_caching: true
 
       - run:
           name: Build service
