--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "build": "docker build -t bitcore-node .",
-    "postinstall": "npm run bootstrap",
+    "postinstall": "npm run bootstrap && npm run compile",
     "bootstrap": "./node_modules/.bin/lerna bootstrap",
     "insight": "cd packages/insight && npm start",
     "node": "cd packages/bitcore-node && npm start",
