--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -24,6 +24,7 @@
     "bitcore-lib-cash": "^8.0.0",
     "bitcore-mnemonic": "^8.0.0",
     "commander": "^2.15.1",
+    "ethereumjs-util": "^6.0.0",
     "leveldown": "^3.0.0",
     "levelup": "^2.0.2",
     "mkdirp": "^0.5.1",
