--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -24,6 +24,8 @@
     "tsc": "npm run clean && ./node_modules/.bin/tsc",
     "tsc:test": "npm run clean && ./node_modules/.bin/tsc",
     "test": "npm run tsc:test && node ./build/test/runners/unit.js && node ./build/test/runners/integration.js",
+    "test:ci": "npm run test",
+    "test:ci:integration": "npm run test:integration",
     "test:verify": "npm run tsc:test && node ./build/test/util/verify.js",
     "test:unit": "npm run tsc:test && node ./build/test/runners/unit.js",
     "test:integration": "npm run tsc:test && node ./build/test/runners/integration.js",
