--- a/Dockerfile-test
+++ b/Dockerfile-test
@@ -12,6 +12,7 @@ COPY  ./packages/bitcore-node/package.json ./packages/bitcore-node/package.json
 COPY  ./packages/bitcore-p2p-cash/package.json ./packages/bitcore-p2p-cash/package.json
 COPY  ./packages/bitcore-p2p/package.json ./packages/bitcore-p2p/package.json
 COPY  ./packages/bitcore-wallet-client/package.json ./packages/bitcore-wallet-client/package.json
+COPY  ./packages/bitcore-wallet-service/package.json ./packages/bitcore-wallet-service/package.json
 COPY  ./packages/bitcore-wallet/package.json ./packages/bitcore-wallet/package.json
 COPY  ./packages/insight-previous/package.json ./packages/insight-previous/package.json
 COPY  ./packages/insight/package.json ./packages/insight/package.json
@@ -22,6 +23,5 @@ ADD . .
 RUN npm run compile
 
 
-# Run test script
-WORKDIR ./packages/bitcore-node
-CMD npm run test
+# Run test script for bitcore-node
+WORKDIR .
