--- a/packages/bitcore-mnemonic/package.json
+++ b/packages/bitcore-mnemonic/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "gulp lint",
     "test": "gulp test",
+    "test:ci": "npm run test",
     "coverage": "gulp coverage",
     "build": "gulp"
   },
@@ -44,6 +45,6 @@
     "unorm": "^1.4.1"
   },
   "peerDependencies": {
-    "bitcore-lib": "^0.16.0"
+    "bitcore-lib": "^8.0.0"
   }
 }
