--- a/packages/bitcore-payment-protocol/package.json
+++ b/packages/bitcore-payment-protocol/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitcore-payment-protocol",
-  "version": "1.8.0",
+  "version": "8.0.0",
   "description": "Payment Protocol (BIP70 and related) support for bitcore",
   "author": "BitPay <dev@bitpay.com>",
   "main": "index.js",
@@ -54,10 +54,8 @@
     "asn1.js-rfc5280": "^3.0.0",
     "bs58": "^4.0.1",
     "jsrsasign": "^8.0.12",
-    "protobufjs": "=5.0.3"
-  },
-  "peerDependencies": {
-    "bitcore-lib": "=0.16.0"
+    "protobufjs": "=5.0.3",
+    "bitcore-lib": "^8.0.0"
   },
   "devDependencies": {
     "bitcore-build": "https://github.com/bitpay/bitcore-build.git#1023e8a99cd42b9241ccafe8e34c52f308c10284",
