--- a/packages/bitcore-wallet-service/package.json
+++ b/packages/bitcore-wallet-service/package.json
@@ -2,7 +2,7 @@
   "name": "bitcore-wallet-service",
   "description": "A service for Mutisig HD Bitcoin Wallets",
   "author": "BitPay Inc",
-  "version": "2.5.1",
+  "version": "8.0.0",
   "license": "MIT",
   "keywords": [
     "bitcoin",
@@ -22,8 +22,8 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "async": "^0.9.2",
-    "bitcore-lib": "=0.16.0",
-    "bitcore-lib-cash": "=0.19.0",
+    "bitcore-lib": "^8.0.0",
+    "bitcore-lib-cash": "^8.0.0",
     "body-parser": "^1.11.0",
     "compression": "^1.6.2",
     "email-validator": "^1.0.1",
@@ -67,6 +67,7 @@
     "stop": "./stop.sh",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --reporter spec test",
     "test": "./node_modules/.bin/mocha --exit",
+    "test:ci": "npm run test",
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "bitcoreNode": "./bitcorenode",
