--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -35,11 +35,11 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
     "e2e": "ionic-app-scripts build && protractor",
-    "postinstall": "webdriver-manager update --gecko false",
+    "postinstall": "./node_modules/.bin/webdriver-manager update --gecko false",
     "start": "ionic serve",
-    "test": "ng test --code-coverage",
+    "test": "./node_modules/@angular/cli/bin/ng test --code-coverage",
     "test:unit-e2e": "ng test --watch=false --code-coverage --browsers ChromeHeadless && npm run e2e --browsers ChromeHeadless",
-    "test:ci": "ng test --watch=false --code-coverage --browsers ChromeHeadless",
+    "!test:ci": "./node_modules/.bin/ng test --watch=false --code-coverage --browsers ChromeHeadless",
     "cov": "opn coverage/index.html",
     "lint": "run-s lint:*",
     "lint:ng": "ng lint",
@@ -80,7 +80,7 @@
     "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.2",
+    "@angular/cli": "^1.7.4",
     "@ionic/app-scripts": "1.3.7",
     "@types/jasmine": "2.5.41",
     "@types/node": "7.0.4",
@@ -94,6 +94,7 @@
     "karma-coverage-istanbul-reporter": "1.2.1",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
+    "ng": "0.0.0",
     "opn-cli": "^3.1.0",
     "protractor": "5.1.2",
     "serve": "^10.0.1",
@@ -102,7 +103,7 @@
     "tslint": "5.3.2",
     "tslint-eslint-rules": "4.1.1",
     "typescript": "2.3.3",
-    "webdriver-manager": "^12.1.0",
+    "webdriver-manager": "^12.1.1",
     "webpack-merge": "^4.1.3"
   },
   "engines": {
