--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -2,7 +2,7 @@
   "name": "bitcore-wallet-client",
   "description": "Client for bitcore-wallet-service",
   "author": "BitPay Inc",
-  "version": "6.8.1",
+  "version": "8.0.0",
   "license": "MIT",
   "keywords": [
     "bitcoin",
@@ -26,10 +26,10 @@
   "dependencies": {
     "async": "^0.9.0",
     "bip38": "^1.3.0",
-    "bitcore-lib": "=0.16.0",
-    "bitcore-lib-cash": "=0.19.0",
-    "bitcore-mnemonic": "^1.3.0",
-    "bitcore-payment-protocol": "^1.7.0",
+    "bitcore-lib": "^8.0.0",
+    "bitcore-lib-cash": "^8.0.0",
+    "bitcore-mnemonic": "^8.0.0",
+    "bitcore-payment-protocol": "^8.0.0",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^4.17.11",
     "preconditions": "^2.2.1",
@@ -37,7 +37,7 @@
     "superagent": "^3.4.1"
   },
   "devDependencies": {
-    "bitcore-wallet-service": "2.5.1",
+    "bitcore-wallet-service": "^8.0.0",
     "browserify": "^13.1.0",
     "chai": "^1.9.1",
     "coveralls": "^3.0.2",
