--- a/packages/bitcore-lib-cash/package.json
+++ b/packages/bitcore-lib-cash/package.json
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "base-x": "=3.0.4",
-    "bitcore-build": "https://github.com/bitpay/bitcore-build.git#1023e8a99cd42b9241ccafe8e34c52f308c10284",
+    "bitcore-build": "^8.0.0",
     "brfs": "^2.0.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
