Tests run for everything, including chrome tests

--- a/packages/bitcore-mnemonic/package.json
+++ b/packages/bitcore-mnemonic/package.json
@@ -36,8 +36,10 @@
   "license": "MIT",
   "devDependencies": {
     "assert": "^1.4.1",
-    "bitcore-build": "https://github.com/bitpay/bitcore-build.git#1023e8a99cd42b9241ccafe8e34c52f308c10284",
+    "bitcore-build": "^8.0.0",
     "brfs": "^2.0.1",
+    "chai": "^4.2.0",
+    "gulp": "^4.0.0",
     "mocha": "^5.2.0"
   },
   "dependencies": {
