--- a/packages/bitcore-payment-protocol/package.json
+++ b/packages/bitcore-payment-protocol/package.json
@@ -58,7 +58,7 @@
     "bitcore-lib": "^8.0.0"
   },
   "devDependencies": {
-    "bitcore-build": "https://github.com/bitpay/bitcore-build.git#1023e8a99cd42b9241ccafe8e34c52f308c10284",
+    "bitcore-build": "^8.0.0",
     "brfs": "^2.0.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
